@@ -1,5 +1,7 @@
 timedir = $(scriptsdir)/Time
 
-time_SCRIPTS =	\
+time_DATA = \
 	NTP.pm		\
 	TimeDate.pm
+
+EXTRA_DIST = $(time_DATA)
