@@ -1,6 +1,8 @@
 usersdir = $(scriptsdir)/Users
 
-users_SCRIPTS =	\
+users_DATA = \
 	Groups.pm		\
 	Shells.pm		\
 	Users.pm
+
+EXTRA_DIST = $(users_DATA)
