@@ -1,5 +1,11 @@
 2006-06-05  Carlos Garnacho  <carlosg@gnome.org>
 
+	* Makefile.am, Init/Makefile.am, Network/Makefile.am,
+	Shares/Makefile.am, Time/Makefile.am, Users/Makefile.am,
+	Utils/Makefile.am: distcheck fixes
+
+2006-06-05  Carlos Garnacho  <carlosg@gnome.org>
+
 	* Users/Users.pm (change_user_chfn): specify which user to modify.
 	(add_user): remove a stray apostrophe.
 	* Users/Groups.pm (change_group): get the correct state for the users
